--- a/CoffeeRoasting_TF.ipynb
+++ b/CoffeeRoasting_TF.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# Optional Lab - Simple Neural Network\n",
+    "# Simple Neural Network\n",
     "In this lab we will build a small neural network using Tensorflow.\n",
     "   <center> <img  src=\"./images/C2_W1_CoffeeRoasting.png\" width=\"400\" />   <center/>\n"
    ]
